--- a/references.bib
+++ b/references.bib
@@ -437,3 +437,80 @@ Publisher: Sigma XI-The Scientific Research Society},
 	url = {https://ehp.niehs.nih.gov/doi/abs/10.1289/ehp.00108347},
 	note = {Publisher: Environmental Health Perspectives}
 }
+
+@article{burnett1997,
+	title = {The role of particulate size and chemistry in the association between summertime ambient air pollution and hospitalization for cardiorespiratory diseases.},
+	author = {Burnett, R T and Cakmak, S and Brook, J R and Krewski, D},
+	year = {1997},
+	month = {06},
+	date = {1997-06},
+	journal = {Environmental Health Perspectives},
+	pages = {614--620},
+	volume = {105},
+	number = {6},
+	doi = {10.1289/ehp.97105614},
+	url = {https://ehp.niehs.nih.gov/doi/abs/10.1289/ehp.97105614},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{burnett1998,
+	title = {The Association between Ambient Carbon Monoxide Levels and Daily Mortality in Toronto, Canada},
+	author = {Burnett, Richard T. and Cakmak, Sabit and Raizenne, Mark E. and Stieb, David and Vincent, Renaud and Krewski, Daniel and Brook, Jeffrey R. and Philips, Owen and Ozkaynak, Haluk},
+	year = {1998},
+	month = {08},
+	date = {1998-08},
+	journal = {Journal of the Air \& Waste Management Association},
+	pages = {689--700},
+	volume = {48},
+	number = {8},
+	doi = {10.1080/10473289.1998.10463718},
+	url = {https://www.tandfonline.com/doi/full/10.1080/10473289.1998.10463718},
+	langid = {en}
+}
+
+@article{ueda2009,
+	title = {Estimating Mortality Effects of Fine Particulate Matter in Japan: A Comparison of Time-Series and Case-Crossover Analyses},
+	author = {Ueda, Kayo and , {Nitta ,Hiroshi} and , {Ono ,Masaji} and and Takeuchi, Ayano},
+	year = {2009},
+	month = {10},
+	date = {2009-10-01},
+	journal = {Journal of the Air \& Waste Management Association},
+	pages = {1212--1218},
+	volume = {59},
+	number = {10},
+	doi = {10.3155/1047-3289.59.10.1212},
+	url = {https://doi.org/10.3155/1047-3289.59.10.1212},
+	note = {Publisher: Taylor \& Francis
+{\_}eprint: https://doi.org/10.3155/1047-3289.59.10.1212}
+}
+
+@article{breitner2009,
+	title = {Short-Term Mortality Rates during a Decade of Improved Air Quality in Erfurt, Germany},
+	author = {Breitner, Susanne and {Stölzel}, Matthias and Cyrys, Josef and Pitz, Mike and {Wölke}, Gabriele and Kreyling, Wolfgang and {Küchenhoff}, Helmut and Heinrich, Joachim and Wichmann, H.-Erich and Peters, Annette},
+	year = {2009},
+	month = {03},
+	date = {2009-03},
+	journal = {Environmental Health Perspectives},
+	pages = {448--454},
+	volume = {117},
+	number = {3},
+	doi = {10.1289/ehp.11711},
+	url = {https://ehp.niehs.nih.gov/doi/10.1289/ehp.11711},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{castillejos2000,
+	title = {Airborne Coarse Particles and Mortality},
+	author = {Castillejos, Margarita and , {Borja-Aburto ,Victor H.} and , {Dockery ,Douglas W.} and , {Gold ,Diane R.} and and Loomis, Dana.},
+	year = {2000},
+	month = {01},
+	date = {2000-01-01},
+	journal = {Inhalation Toxicology},
+	pages = {61--72},
+	volume = {12},
+	number = {sup1},
+	doi = {10.1080/0895-8378.1987.11463182},
+	url = {https://doi.org/10.1080/0895-8378.1987.11463182},
+	note = {Publisher: Taylor \& Francis
+{\_}eprint: https://doi.org/10.1080/0895-8378.1987.11463182}
+}
